--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "react-moralis": "^1.4.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "4.0.3",
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
