--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.1",
     "@chakra-ui/react": "^2.1.2",
+    "@coinbase/wallet-sdk": "^3.5.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@ethersproject/contracts": "^5.6.2",
@@ -13,6 +14,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@usedapp/core": "^1.1.5",
     "@walletconnect/web3-provider": "^1.8.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/walletlink-connector": "^6.2.14",
     "ethers": "^5.6.9",
     "framer-motion": "^4.1.17",
     "react": "^18.1.0",
@@ -23,7 +26,8 @@
     "react-scripts": "4.0.3",
     "react-swipeable-views": "^0.14.0",
     "web-vitals": "^2.1.4",
-    "web3": "^1.7.4"
+    "web3": "^1.7.4",
+    "web3-react": "^5.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
