--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@walletconnect/web3-provider": "^1.8.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/walletlink-connector": "^6.2.14",
+    "axios": "^0.27.2",
     "ethers": "^5.6.9",
     "framer-motion": "^4.1.17",
+    "mime": "^3.0.0",
+    "nft.storage": "^7.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
